--- a/Shikhai/Shikhai.csproj
+++ b/Shikhai/Shikhai.csproj
@@ -1337,6 +1337,22 @@
     <Content Include="Content\media\bg\4.jpg" />
     <Content Include="Content\media\bg\5.jpg" />
     <Content Include="Content\media\bg\6.jpg" />
+    <Content Include="Content\superior\accordion.min.css" />
+    <Content Include="Content\superior\alertify.min.css" />
+    <Content Include="Content\superior\checkbox.min.css" />
+    <Content Include="Content\superior\color.css" />
+    <Content Include="Content\superior\css14.css" />
+    <Content Include="Content\superior\css_support1.css" />
+    <Content Include="Content\superior\customScrollbar.css" />
+    <Content Include="Content\superior\form.css" />
+    <Content Include="Content\superior\jquery.countdown.css" />
+    <Content Include="Content\superior\main2.css" />
+    <Content Include="Content\superior\menu.min.css" />
+    <Content Include="Content\superior\owl.carousel.css" />
+    <Content Include="Content\superior\owl.theme.css" />
+    <Content Include="Content\superior\responsive.css" />
+    <Content Include="Content\superior\simplyscroll.css" />
+    <Content Include="Content\superior\wickedpicker.min.css" />
     <Content Include="Scripts\modernizr-2.6.2.min.js" />
     <Content Include="Content\normalize.css" />
     <Content Include="Content\users\avatar1.jpg" />
@@ -3567,6 +3583,7 @@
     <Content Include="Content\metronic\uxsolutions-bootstrap-datepicker-v1.7.1-12\css\bootstrap-datepicker3.standalone.css.map" />
     <Content Include="Content\assets\pages\media\blog\Thumbs.db" />
     <Content Include="Content\assets\pages\media\pages\Thumbs.db" />
+    <Content Include="Content\superior\style.scss" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Scripts\jquery-slimscroll\jquery.slimscroll.js" />
     <Content Include="Scripts\moment\moment-with-locales.js" />
