--- a/Shikhai/Shikhai.csproj
+++ b/Shikhai/Shikhai.csproj
@@ -4092,6 +4092,7 @@
     <Content Include="Views\Testimonials\Details.cshtml" />
     <Content Include="Views\Testimonials\Edit.cshtml" />
     <Content Include="Views\Testimonials\Index.cshtml" />
+    <Content Include="Views\Catalog\_HomePageSearch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
