--- a/Shikhai/Shikhai.csproj
+++ b/Shikhai/Shikhai.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Controllers\OrderPaymentStatusController.cs" />
     <Compile Include="Controllers\PaymentsController.cs" />
     <Compile Include="Controllers\TestimonialsController.cs" />
+    <Compile Include="Controllers\TutorsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DAL\AccountDataAccessRepository.cs" />
     <Compile Include="DAL\BannerDataAccessRepository.cs" />
@@ -4100,6 +4101,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Students\" />
+    <Folder Include="Views\Tutors\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
