--- a/Shikhai/Shikhai.csproj
+++ b/Shikhai/Shikhai.csproj
@@ -775,6 +775,7 @@
     <Content Include="Content\blueimp-gallery2\img\video-play.svg" />
     <Content Include="Content\bootstrap\css\bootstrap-datetimepicker.css" />
     <Content Include="Content\bootstrap\css\bootstrap-datetimepicker.min.css" />
+    <Content Include="Content\bootstrap\css\bootstrap-multiselect.css" />
     <Content Include="Content\bootstrap\css\bootstrap-theme.css" />
     <Content Include="Content\bootstrap\css\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap\css\bootstrap.css" />
@@ -1379,6 +1380,9 @@
     <Content Include="Content\media\bg\4.jpg" />
     <Content Include="Content\media\bg\5.jpg" />
     <Content Include="Content\media\bg\6.jpg" />
+    <Content Include="Content\summernote\summernote-ko-KR.js" />
+    <Content Include="Content\summernote\summernote.css" />
+    <Content Include="Content\summernote\summernote.js" />
     <Content Include="Content\superior\accordion.min.css" />
     <Content Include="Content\superior\alertify.min.css" />
     <Content Include="Content\superior\checkbox.min.css" />
@@ -1403,6 +1407,28 @@
     <Content Include="Content\superior\owl.theme.css" />
     <Content Include="Content\superior\responsive.css" />
     <Content Include="Content\superior\simplyscroll.css" />
+    <Content Include="Content\superior\js\accordion.min.js" />
+    <Content Include="Content\superior\js\alertify.min.js" />
+    <Content Include="Content\superior\js\appear.js" />
+    <Content Include="Content\superior\js\checkbox.min.js" />
+    <Content Include="Content\superior\js\chosen.jquery.js" />
+    <Content Include="Content\superior\js\countTo.js" />
+    <Content Include="Content\superior\js\customScrollbar.min.js" />
+    <Content Include="Content\superior\js\cycle2.min.js" />
+    <Content Include="Content\superior\js\form.js" />
+    <Content Include="Content\superior\js\gmap3.js" />
+    <Content Include="Content\superior\js\jquery-ui.js" />
+    <Content Include="Content\superior\js\jquery.countdown.js" />
+    <Content Include="Content\superior\js\jquery.form.min.js" />
+    <Content Include="Content\superior\js\loader.js" />
+    <Content Include="Content\superior\js\markerclusterer.min.js" />
+    <Content Include="Content\superior\js\owl.carousel.min.js" />
+    <Content Include="Content\superior\js\parallax.js" />
+    <Content Include="Content\superior\js\simplyscroll.min.js" />
+    <Content Include="Content\superior\js\summernote-ko-KR.js" />
+    <Content Include="Content\superior\js\summernote.css" />
+    <Content Include="Content\superior\js\summernote.js" />
+    <Content Include="Content\superior\js\wickedpicker.min.js" />
     <Content Include="Content\superior\superior-style.css" />
     <Content Include="Content\superior\wickedpicker.min.css" />
     <Content Include="Scripts\main14.js" />
